--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,17 +13,19 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 h1,
-p {
+p,
+label {
   font-weight: normal;
   font-style: normal;
-  font-family: Righteous;
+  font-family: 'Righteous', cursive,
+    sans-serif;
 }
 
 .wrapper {
@@ -37,11 +39,11 @@ p {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 65px 0 31px 0;
 }
 
@@ -71,7 +73,7 @@ p {
   height: 34px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .main-interface {
@@ -80,15 +82,15 @@ p {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .main-interface__button-log-in-with-google {
-  background: #FFFFFF;
+  background: #FFF;
   border: 1px solid #E1E1E1;
 }
 
@@ -97,4 +99,127 @@ p {
   font-size: 14px;
   line-height: 17px;
 }
+
+.main-interface__option {
+  color: #999;
+  font-size: 8px;
+  line-height: 10px;
+}
+
+.main-interface__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.main-interface__email-label {
+  margin-left: 35px;
+  margin-bottom: 3px;
+}
+
+.main-interface__password-label {
+  margin-top: 2px;
+  margin-bottom: 4px;
+}
+
+.main-interface__email-input,
+.main-interface__password-input {
+  background: #FFF;
+  border: 1px solid #E1E1E1;
+  border-radius: 5px;
+  width: 215px;
+  height: 34px;
+  margin-left: 35px;
+  margin-right: 46px;
+}
+
+.main-interface__helper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.main-interface__checkbox {
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  margin-right: 4px;
+  margin-bottom: 4px;
+  margin-top: 14px;
+}
+
+.main-interface__keep-logged-in {
+  font-size: 7px;
+  line-height: 9px;
+  color: #999;
+  width: 110px;
+  margin-bottom: 7px;
+  margin-top: 15px;
+}
+
+.main-interface__forgot-password {
+  text-decoration: none;
+  font-size: 8px;
+  line-height: 10px;
+  color: #EC6969;
+  margin-bottom: 1px;
+  margin-top: 14px;
+}
+
+.main-interface__button-log-in {
+  background: -webkit-gradient(linear, left top, left bottom, from(#029348), to(#017439));
+  background: linear-gradient(180deg, #029348 0%, #017439 100%);
+  border: none;
+  margin-bottom: 15px;
+}
+
+.main-interface__button-log-in__text {
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFF;
+}
+
+.main-interface__sign-up {
+  font-size: 8px;
+  line-height: 10px;
+  color: #999;
+}
+
+.main-interface__sign-up__highlighted {
+  color: red;
+  text-decoration: none;
+}
+
+.label {
+  display: block;
+  width: 100%;
+  margin-left: 35px;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.vector {
+  border: 1px solid #E1E1E1;
+  height: 0px;
+  width: 76px;
+}
+
+.vector--left {
+  margin: 16px 2px 11px 0;
+}
+
+.vector--right {
+  margin: 16px 0 11px 2px;
+}
+
+.vector--long {
+  width: 214px;
+  margin-bottom: 7px;
+}
+
 /*# sourceMappingURL=style.css.map */
