--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,25 +1,6 @@
 // font-family: 'Righteous', cursive;
-@import "layout";
 @import "variables";
+@import "layout";
 @import "header";
 @import "button";
-
-.main-interface {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &__button-log-in-with-google {
-        // display: inline-block;
-        background: #FFFFFF;
-        border: 1px solid #E1E1E1;
-        // margin: 0 35px 0 45px;
-
-
-        &__text {
-            color: #4D4D4D;
-            font-size: 14px;
-            line-height: 17px;
-        }
-    }
-}
+@import "main";
