--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -13,10 +13,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 h1,
@@ -24,8 +24,8 @@ p,
 label {
   font-weight: normal;
   font-style: normal;
-  font-family: 'Righteous', cursive,
-    sans-serif;
+  font-family: 'Righteous', cursive, sans-serif;
+  color: #4D4D4D;
 }
 
 .wrapper {
@@ -39,11 +39,11 @@ label {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 65px 0 31px 0;
 }
 
@@ -73,7 +73,7 @@ label {
   height: 34px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .main-interface {
@@ -82,11 +82,11 @@ label {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-interface__button-log-in-with-google {
@@ -103,7 +103,7 @@ label {
 .main-interface__option {
   color: #999;
   font-size: 8px;
-  line-height: 10px;
+  text-transform: uppercase;
 }
 
 .main-interface__container {
@@ -111,12 +111,13 @@ label {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 11px;
 }
 
 .main-interface__email-label {
-  margin-left: 35px;
+  margin-top: 8px;
   margin-bottom: 3px;
 }
 
@@ -125,15 +126,13 @@ label {
   margin-bottom: 4px;
 }
 
-.main-interface__email-input,
-.main-interface__password-input {
+.main-interface__email-input, .main-interface__password-input {
   background: #FFF;
   border: 1px solid #E1E1E1;
   border-radius: 5px;
   width: 215px;
   height: 34px;
-  margin-left: 35px;
-  margin-right: 46px;
+  padding-left: 10px;
 }
 
 .main-interface__helper {
@@ -141,14 +140,14 @@ label {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .main-interface__checkbox {
   border: 1px solid #E1E1E1;
   border-radius: 4px;
-  margin-right: 4px;
+  margin-right: 3px;
   margin-bottom: 4px;
   margin-top: 14px;
 }
@@ -166,9 +165,12 @@ label {
   text-decoration: none;
   font-size: 8px;
   line-height: 10px;
-  color: #EC6969;
   margin-bottom: 1px;
   margin-top: 14px;
+}
+
+.main-interface__forgot-password__text {
+  color: #EC6969;
 }
 
 .main-interface__button-log-in {
@@ -198,7 +200,6 @@ label {
 .label {
   display: block;
   width: 100%;
-  margin-left: 35px;
   font-size: 14px;
   line-height: 17px;
 }
@@ -206,15 +207,15 @@ label {
 .vector {
   border: 1px solid #E1E1E1;
   height: 0px;
-  width: 76px;
+  width: 65px;
 }
 
 .vector--left {
-  margin: 16px 2px 11px 0;
+  margin-right: 2px;
 }
 
 .vector--right {
-  margin: 16px 0 11px 2px;
+  margin-left: 2px;
 }
 
 .vector--long {
@@ -222,4 +223,129 @@ label {
   margin-bottom: 7px;
 }
 
+.aside__flower {
+  display: none;
+}
+
+@media (orientation: landscape) {
+  .wrapper {
+    width: calc(622px + 860px);
+    height: 746px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .left {
+    width: 622px;
+  }
+  .right {
+    width: 860px;
+    height: 500px;
+  }
+  .right .aside__flower {
+    display: block;
+    height: 746px;
+    width: 860px;
+  }
+  .logo {
+    margin: 0;
+  }
+  .logo__img {
+    margin-top: 25px;
+    width: 63px;
+    height: 85px;
+  }
+  .logo__h1 {
+    margin-top: 47px;
+    font-size: 27px;
+    height: 60px;
+  }
+  .header {
+    margin-bottom: 8px;
+  }
+  .header__welcome-back {
+    font-size: 64px;
+    line-height: 79px;
+  }
+  .main-interface__button-log-in-with-google__text {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .main-interface__option {
+    font-size: 14px;
+  }
+  .main-interface__container {
+    margin-top: 25px;
+  }
+  .main-interface__email-label {
+    margin-top: 10px;
+  }
+  .main-interface__password-label {
+    margin-top: 11px;
+  }
+  .main-interface__email-input, .main-interface__password-input {
+    width: 416px;
+    height: 71px;
+    padding-left: 20px;
+  }
+  .main-interface__checkbox {
+    width: 18px;
+    height: 19px;
+    margin-bottom: 13px;
+    margin-top: 18px;
+    margin-right: 2px;
+  }
+  .main-interface__keep-logged-in {
+    width: 236px;
+    height: 17px;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 14px;
+    margin-top: 19px;
+    margin-right: 6px;
+  }
+  .main-interface__forgot-password {
+    text-decoration: none;
+    line-height: 17px;
+    font-size: 14px;
+    margin-top: 18px;
+  }
+  .main-interface__button-log-in {
+    margin-bottom: 18px;
+  }
+  .main-interface__button-log-in__text {
+    font-size: 24px;
+    line-height: 30px;
+    color: #FFF;
+  }
+  .main-interface__sign-up {
+    font-size: 14px;
+    line-height: 17px;
+    color: #999;
+  }
+  .main-interface__sign-up__highlighted {
+    color: red;
+    text-decoration: none;
+  }
+  .label {
+    font-size: 24px;
+  }
+  .button {
+    width: 416px;
+    height: 71px;
+  }
+  .vector {
+    width: 127px;
+  }
+  .vector--left {
+    margin-right: 6px;
+  }
+  .vector--right {
+    margin-left: 6px;
+  }
+  .vector--long {
+    width: 410px;
+    margin-bottom: 17px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
