--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,6 +19,7 @@ label {
     font-style: normal;
     font-family: 'Righteous', cursive,
         sans-serif;
+    color: #4D4D4D;
 }
 
 .wrapper {
