--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,28 @@ label {
   background-color: #FFF;
 }
 
+@media (orientation: landscape) {
+  .wrapper {
+    width: calc(622px + 860px);
+    height: 746px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .left {
+    width: 622px;
+  }
+  .right {
+    width: 860px;
+    height: 500px;
+  }
+  .right .aside__flower {
+    display: block;
+    height: 746px;
+    width: 860px;
+  }
+}
+
 .logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -68,12 +90,42 @@ label {
   line-height: 45px;
 }
 
+@media (orientation: landscape) {
+  .logo {
+    margin: 0;
+  }
+  .logo__img {
+    margin-top: 25px;
+    width: 63px;
+    height: 85px;
+  }
+  .logo__h1 {
+    margin-top: 47px;
+    font-size: 27px;
+    height: 60px;
+  }
+  .header {
+    margin-bottom: 8px;
+  }
+  .header__welcome-back {
+    font-size: 64px;
+    line-height: 79px;
+  }
+}
+
 .button {
   width: 215px;
   height: 34px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+@media (orientation: landscape) {
+  .button {
+    width: 416px;
+    height: 71px;
+  }
 }
 
 .main-interface {
@@ -223,50 +275,7 @@ label {
   margin-bottom: 7px;
 }
 
-.aside__flower {
-  display: none;
-}
-
 @media (orientation: landscape) {
-  .wrapper {
-    width: calc(622px + 860px);
-    height: 746px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .left {
-    width: 622px;
-  }
-  .right {
-    width: 860px;
-    height: 500px;
-  }
-  .right .aside__flower {
-    display: block;
-    height: 746px;
-    width: 860px;
-  }
-  .logo {
-    margin: 0;
-  }
-  .logo__img {
-    margin-top: 25px;
-    width: 63px;
-    height: 85px;
-  }
-  .logo__h1 {
-    margin-top: 47px;
-    font-size: 27px;
-    height: 60px;
-  }
-  .header {
-    margin-bottom: 8px;
-  }
-  .header__welcome-back {
-    font-size: 64px;
-    line-height: 79px;
-  }
   .main-interface__button-log-in-with-google__text {
     font-size: 24px;
     line-height: 30px;
@@ -330,10 +339,6 @@ label {
   .label {
     font-size: 24px;
   }
-  .button {
-    width: 416px;
-    height: 71px;
-  }
   .vector {
     width: 127px;
   }
@@ -347,5 +352,9 @@ label {
     width: 410px;
     margin-bottom: 17px;
   }
+}
+
+.aside__flower {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
