--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -4,3 +4,10 @@
     border-radius: 5px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
+
+@media (orientation: landscape) {
+    .button {
+        width: 416px;
+        height: 71px;
+    }
+}
