--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,3 +27,27 @@ label {
     width: 295px;
     background-color: $bgcColor;
 }
+
+@media (orientation: landscape) {
+    .wrapper {
+        width: calc(622px + 860px);
+        height: 746px;
+        display: flex;
+    }
+
+    .left {
+        width: 622px;
+    }
+
+    .right {
+        width: 860px;
+        height: 500px;
+
+        .aside__flower {
+            display: block;
+            height: 746px;
+            width: 860px;
+            // problem with %
+        }
+    }
+}
