--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -133,3 +133,113 @@
         margin-bottom: 7px;
     }
 }
+
+@media (orientation: landscape) {
+
+    .main-interface {
+        &__button-log-in-with-google {
+
+            &__text {
+                font-size: 24px;
+                line-height: 30px;
+            }
+        }
+
+        &__option {
+            font-size: 14px;
+
+        }
+
+        &__container {
+            margin-top: 25px;
+        }
+
+        &__email-label {
+            margin-top: 10px;
+        }
+
+        &__password-label {
+            margin-top: 11px;
+        }
+
+        &__email-input,
+        &__password-input {
+            width: 416px;
+            height: 71px;
+            padding-left: 20px;
+        }
+
+        &__email-input[placeholder],
+        &__password-input[placeholder] {}
+
+        &__email-input[placeholder]:focus,
+        &__password-input[placeholder]:focus {}
+
+        &__checkbox {
+            width: 18px;
+            height: 19px;
+            margin-bottom: 13px;
+            margin-top: 18px;
+            margin-right: 2px;
+        }
+
+        &__keep-logged-in {
+            width: 236px;
+            height: 17px;
+            font-size: 14px;
+            line-height: 17px;
+            margin-bottom: 14px;
+            margin-top: 19px;
+            margin-right: 6px;
+        }
+
+        &__forgot-password {
+            text-decoration: none;
+            line-height: 17px;
+            font-size: 14px;
+            margin-top: 18px;
+        }
+
+        &__button-log-in {
+            margin-bottom: 18px;
+
+            &__text {
+                font-size: 24px;
+                line-height: 30px;
+                color: #FFF;
+            }
+        }
+
+        &__sign-up {
+            font-size: 14px;
+            line-height: 17px;
+            color: $fontColor;
+
+            &__highlighted {
+                color: red;
+                text-decoration: none;
+            }
+        }
+    }
+
+    .label {
+        font-size: 24px;
+    }
+
+    .vector {
+        width: 127px;
+
+        &--left {
+            margin-right: 6px;
+        }
+
+        &--right {
+            margin-left: 6px;
+        }
+
+        &--long {
+            width: 410px;
+            margin-bottom: 17px;
+        }
+    }
+}
