--- a/sass/_logo.scss
+++ b/sass/_logo.scss
@@ -7,10 +7,34 @@
     &__img {
         height: 40px;
         width: 33px;
+
     }
 
     &__h1 {
         font-size: 18px;
         line-height: 22px;
+    }
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+
+@media (orientation: landscape) {
+    .logo {
+        margin: 0;
+
+        &__img {
+            margin-top: 25px;
+            width: 63px;
+            height: 85px;
+        }
+
+        &__h1 {
+            margin-top: 47px;
+            font-size: 27px;
+            height: 60px;
+        }
     }
 }
