--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,15 @@
+// COLORS
+$fontColorMain:#4D4D4D;
 $bgcColor: #FFF;
-$borderProperties:1px solid #E1E1E1;
 $fontColor:#999;
+$fontHighlighted: #EC6969;
+$vectorColor:#E1E1E1;
+$greenGradient:linear-gradient(180deg, #029348 0%, #017439 100%);
+
+// BORDER
+$borderPropertiesWhite:1px solid #E1E1E1;
+$borderPropertiesBlack:0px 2px 2px rgba(0, 0, 0, 0.1);
+
+// SIZES
+$fontSize:14px;
+$lineHeight:17px;
