--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,7 @@
-// font-family: 'Righteous', cursive;
 @import "variables";
+@import "mixins";
 @import "layout";
 @import "header";
 @import "button";
 @import "main";
 @import "aside";
-@import "mediaQueries";
