--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -2,7 +2,11 @@
     width: 215px;
     height: 34px;
     border-radius: 5px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: $borderPropertiesBlack;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 @media (orientation: landscape) {
