--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,22 +4,19 @@
     box-sizing: border-box;
 }
 
-body {
-    background: linear-gradient(180deg, #029348 0%, #017439 100%);
+.background {
+    background: $greenGradient;
     min-height: 100vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-h1,
-p,
-label {
-    font-weight: normal;
-    font-style: normal;
+.text {
     font-family: 'Righteous', cursive,
         sans-serif;
-    color: #4D4D4D;
+    font-weight: normal;
+    color: $fontColorMain;
 }
 
 .wrapper {
@@ -33,21 +30,14 @@ label {
         width: calc(622px + 860px);
         height: 746px;
         display: flex;
-    }
 
-    .left {
-        width: 622px;
-    }
+        &__left {
+            width: 622px;
+        }
 
-    .right {
-        width: 860px;
-        height: 500px;
-
-        .aside__flower {
-            display: block;
-            height: 746px;
+        &__right {
             width: 860px;
-            // problem with %
+            height: 500px;
         }
     }
 }
