--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -49,6 +49,14 @@
         padding-left: 10px;
     }
 
+    &__floating-label {
+
+        &-email,
+        &-password {
+            display: none;
+        }
+    }
+
     &__box {
         display: flex;
         justify-content: flex-end;
@@ -96,6 +104,10 @@
             @include fontSizeAndLineHeight;
             color: $bgcColor;
         }
+    }
+
+    &__checkbox:checked+&__keep-logged-in {
+        color: green;
     }
 
     &__sign-up {
@@ -166,15 +178,106 @@
         &__password-input {
             width: 416px;
             height: 71px;
-            padding-left: 20px;
+            padding-left: 14px;
+            padding-top: 10px;
         }
 
-        // &__email-input[placeholder],
-        // &__password-input[placeholder] {}
+        // /////////////////
+        // .main-interface__email-input:focus+.floating-label-email {
+        //     animation: floatingTablesEmail .2s linear forwards;
+        // }
 
-        // &__email-input[placeholder]:focus,
-        // &__password-input[placeholder]:focus {}
 
+        // .main-interface__password-input:focus+.floating-label-password {
+        //     animation: floatingTablesPassword .2s linear both;
+        // }
+
+        &__box-email {
+            position: relative;
+        }
+
+        &__box-password {
+            position: relative;
+        }
+
+        &__email-input:focus~&__floating-label-email,
+        &__password-input:focus~&__floating-label-password {
+            top: 30%;
+            left: 3.5%;
+            font-family: 'Righteous', cursive,
+                sans-serif;
+            font-weight: normal;
+            color: $fontColorMain;
+            font-size: 16px;
+        }
+
+        &__email-input:not(:focus):valid~&__floating-label-email,
+        &__password-input:not(:focus):valid~&__floating-label-password {
+            top: 30%;
+            left: 3.5%;
+            font-family: 'Righteous', cursive,
+                sans-serif;
+            font-weight: normal;
+            color: $fontColorMain;
+            font-size: 16px;
+        }
+
+
+
+        &__floating-label {
+
+            &-email {
+                display: inline-block;
+                position: absolute;
+                top: 52%;
+                left: 4.5%;
+                font-size: 14px;
+                font-family: 'Righteous', cursive,
+                    sans-serif;
+                transition: .3s;
+            }
+
+            &-password {
+                display: inline-block;
+                position: absolute;
+                top: 52%;
+                left: 4.5%;
+                font-size: 14px;
+                font-family: 'Righteous', cursive,
+                    sans-serif;
+                transition: .3s;
+            }
+        }
+
+        @keyframes floatingTablesEmail {
+            0% {}
+
+            100% {
+                top: 30%;
+                left: 3.5%;
+                font-family: 'Righteous', cursive,
+                    sans-serif;
+                font-weight: normal;
+                color: $fontColorMain;
+                font-size: 16px;
+            }
+        }
+
+        @keyframes floatingTablesPassword {
+            0% {}
+
+            100% {
+                top: 30%;
+                left: 3.5%;
+                font-family: 'Righteous', cursive,
+                    sans-serif;
+                font-weight: normal;
+                color: $fontColorMain;
+                font-size: 16px;
+            }
+        }
+
+        ////////////////////////
         &__checkbox {
             width: 18px;
             height: 19px;
