--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
-@import "variables";
-@import "mixins";
-@import "layout";
-@import "header";
-@import "button";
-@import "main";
-@import "aside";
+@import "./variables";
+@import "./mixins";
+@import "./layout";
+@import "./header";
+@import "./button";
+@import "./main";
+@import "./aside";
